# bazel-rust-example

./: .bazelrc  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  exercise.sh
examples/ambiguous_deps/: BUILD.bazel
examples/ambiguous_deps/x/: BUILD.bazel
examples/cargo/: BUILD.bazel
examples/hello_lib/: BUILD.bazel
examples/hello_world/: BUILD.bazel
